apps/media-server/sonarr/sonarr-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - worker
      containers:
        - name: sonarr
          image: linuxserver/sonarr:4.0.17
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
          ports:
            - containerPort: 8989
          startupProbe:
            httpGet:
              path: /ping
              port: 8989
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /ping
              port: 8989
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: 8989
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-videos
        - name: gluetun-config
          emptyDir: {}
        - name: iptables-rules
          configMap:
            name: sonarr-iptables
