apps/media-server/sonarr/sonarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 8989
      protocol: TCP
  selector:
    app: sonarr
